Body overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
   background-color: #DE3D2B;
   height: 100vh;
-  overflow: hidden;
 }
